[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "recontk"
version = "0.1.0"
description = "Self-hosted, terminal-focused security scanning and reconnaissance toolkit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "recontk contributors" }]
keywords = ["security", "recon", "scanning", "penetration-testing", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # CLI framework
    "typer>=0.12,<1.0",
    # Pydantic v2 — data validation
    "pydantic>=2.6,<3.0",
    # YAML parsing
    "pyyaml>=6.0,<7.0",
    # Rich terminal output
    "rich>=13.7,<15.0",
    # Async HTTP client (library usage — not the httpx CLI tool)
    "httpx>=0.27,<1.0",
    # DNS resolution
    "dnspython>=2.6,<3.0",
    # TLS inspection
    "cryptography>=42.0,<45.0",
    # Jinja2 templating for reports
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.9,<2.0",
    "ruff>=0.4,<1.0",
]
screenshot = [
    # playwright must be installed separately via `playwright install chromium`
    "playwright>=1.43,<2.0",
]

[project.scripts]
recontk = "recontk.cli:app"

[project.entry-points."recontk.plugins"]
# Third-party plugins register here.
# Example:
#   my_plugin = "my_plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["recontk"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PTH"]
ignore = [
    "S603",   # subprocess without shell=True is our intentional pattern
    "S607",   # partial executable path — we use shutil.which first
]
